syntax = "proto3";

package blogging;

option go_package = "./blogging";

message BlogPost {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    repeated string tags = 6;
}

service BlogService {
    rpc CreatePost(CreatePostRequest) returns (CreatePostResponse);
    rpc ReadPost(GetPostRequest) returns (GetPostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message CreatePostRequest {
    BlogPost post = 1;
}

message CreatePostResponse {
    string post_id = 1;
}

message GetPostRequest {
    string post_id = 1;
}

message GetPostResponse {
    BlogPost post = 1;
}

message UpdatePostRequest {
    string post_id = 1;
    BlogPost post = 2;
}

message UpdatePostResponse {
    string message = 1;
}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {
    string message = 1;
}
